| Priyanshu| fix language-hour-goal issue in thankyou page

--- a/crowdsource-ui/locales/hi.json
+++ b/crowdsource-ui/locales/hi.json
@@ -476,5 +476,7 @@
 	"sentence(s) validated": "sentence(s) validated",
 	"sentence(s) contributed": "sentence(s) contributed",
 	"image(s) labels contributed": "image(s) labels contributed",
-	"image(s) labels validated": "image(s) labels validated"
+	"image(s) labels validated": "image(s) labels validated",
+	"Help your language pair achieve it’s goal of <span id=\"language-hour-goal\"></span> translations. We know you can do more!": "Help your language pair achieve it’s goal of <span id=\"language-hour-goal\"></span> translations. We know you can do more!",
+	"Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!": "Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!"
 }
