| Priyanshu + Ayush | fix ui issue in profanity pages

--- a/crowdsource-ui/locales/or.json
+++ b/crowdsource-ui/locales/or.json
@@ -488,5 +488,6 @@
 	"image(s) labels contributed": "image(s) labels contributed",
 	"image(s) labels validated": "image(s) labels validated",
 	"Help your language pair achieve it’s goal of <span id=\"language-hour-goal\"></span> translations. We know you can do more!": "Help your language pair achieve it’s goal of <span id=\"language-hour-goal\"></span> translations. We know you can do more!",
-	"Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!": "Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!"
+	"Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!": "Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!",
+	"Thank you for contributing.": "Thank you for contributing."
 }
