--- a/crowdsource-ui/locales/doi.json
+++ b/crowdsource-ui/locales/doi.json
@@ -467,5 +467,6 @@
 	"Help your language pair achieve it’s goal of <span id=\"language-hour-goal\"></span> translations. We know you can do more!": "Help your language pair achieve it’s goal of <span id=\"language-hour-goal\"></span> translations. We know you can do more!",
 	"Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!": "Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!",
 	"Thank you for contributing.": "Thank you for contributing.",
-	"Images validated": "Images validated"
+	"Images validated": "Images validated",
+	"By hours of data contributed and validated": "By hours of data contributed and validated"
 }
