--- a/crowdsource-ui/locales/mr.json
+++ b/crowdsource-ui/locales/mr.json
@@ -427,5 +427,8 @@
 	"Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!": "Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!",
 	"Thank you for contributing.": "Thank you for contributing.",
 	"Images validated": "Images validated",
-	"By hours of data recorded and validated": "By hours of data recorded and validated"
+	"By hours of data recorded and validated": "By hours of data recorded and validated",
+	"Your feedback helps us keep Suno India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Suno India relevant, we appreciate you taking time to leave the feedback.",
+	"Your feedback helps us keep Likho India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Likho India relevant, we appreciate you taking time to leave the feedback.",
+	"Your feedback helps us keep Dekho India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Dekho India relevant, we appreciate you taking time to leave the feedback."
 }
