Ayush | Fix some mobile view changes

--- a/crowdsource-ui/locales/ml.json
+++ b/crowdsource-ui/locales/ml.json
@@ -498,5 +498,6 @@
 	"TAKE A STEP TOWARDS DIGITAL INDIA": "TAKE A STEP TOWARDS DIGITAL INDIA",
 	"CONTRIBUTE NOW TO INDIA’S BIGGEST CROWDSOURCING INITIATIVE": "CONTRIBUTE NOW TO INDIA’S BIGGEST CROWDSOURCING INITIATIVE",
 	"Ministry of Electronics & Information Technology": "Ministry of Electronics & Information Technology",
-	"Government of India": "Government of India"
+	"Government of India": "Government of India",
+	"Test": "Test"
 }
