| Priyanshu | fix header css

--- a/crowdsource-ui/locales/as.json
+++ b/crowdsource-ui/locales/as.json
@@ -551,5 +551,6 @@
 	"CONTRIBUTE NOW TO INDIA’S BIGGEST CROWDSOURCING INITIATIVE": "CONTRIBUTE NOW TO INDIA’S BIGGEST CROWDSOURCING INITIATIVE",
 	"Ministry of Electronics & Information Technology": "Ministry of Electronics & Information Technology",
 	"Government of India": "Government of India",
-	"Test": "Test"
+	"Test": "Test",
+	"(Recording)": "(Recording)"
 }
