--- a/crowdsource-ui/locales/hi.json
+++ b/crowdsource-ui/locales/hi.json
@@ -481,5 +481,7 @@
 	"Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!": "Help your language achieve it’s goal of <span id=\"language-hour-goal\"></span> images. We know you can do more!",
 	"Thank you for contributing.": "Thank you for contributing.",
 	"Images validated": "Images validated",
-	"By hours of data recorded and validated": "By hours of data recorded and validated"
+	"By hours of data recorded and validated": "By hours of data recorded and validated",
+	"Submitted successfully": "Submitted successfully",
+	"Thank you for your feedback!": "Thank you for your feedback!"
 }
