--- a/crowdsource-ui/locales/mr.json
+++ b/crowdsource-ui/locales/mr.json
@@ -451,5 +451,6 @@
 	"Ministry of Electronics & Information Technology": "Ministry of Electronics & Information Technology",
 	"Government of India": "Government of India",
 	"Test": "Test",
-	"(Recording)": "(Recording)"
+	"(Recording)": "(Recording)",
+	"Let's Go": "Let's Go"
 }
